<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_error_login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#F5F5DC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="0dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toTopOf="@+id/body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_welcome_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_maintextError"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/body"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_container"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <Button
                        android:id="@+id/boton_cerrarSesion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/material_dynamic_primary80"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/login_button"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:iconPadding="8dp"
                        app:iconTint="@android:color/transparent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:rippleColor="@android:color/transparent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <ScrollView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fillViewport="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cl_button">

                    <TableLayout
                        android:id="@+id/tableLayout_MostrarErrores"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cl_button">

                        <TableRow tools:ignore="UselessParent">

                            <TextView
                                android:padding="8dp"
                                android:text="@string/input_username"
                                android:textStyle="bold" />

                            <TextView
                                android:padding="8dp"
                                android:text="@string/input_password"
                                android:textStyle="bold" />

                            <TextView
                                android:padding="8dp"
                                android:text="@string/tabla_horaError"
                                android:textStyle="bold" />

                            <TextView
                                android:padding="8dp"
                                android:text="@string/tabla_errorCode"
                                android:textStyle="bold" />
                        </TableRow>
                    </TableLayout>
                </ScrollView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>