<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_edit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#F5F5DC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="0dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toTopOf="@+id/body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_welcome_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_maintext"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/body"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/login_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/inbox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@+id/buttonsContainer"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPassword"
                        style="@style/CustomTextInputLayout"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        app:endIconMode="password_toggle"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/CustomTextInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/input_password"
                            android:inputType="textPassword"
                            android:textColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputUserName"
                        style="@style/CustomTextInputLayout"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toTopOf="@+id/textInputPassword"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/CustomTextInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/input_username"
                            android:textColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/buttonsContainer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/inbox">

                    <Button
                        android:id="@+id/textView_recovery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:text="@string/forgotten"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textStyle="bold|italic"
                        app:layout_constraintBottom_toTopOf="@+id/btn_login"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView_createAccount" />

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/material_dynamic_primary80"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/login_button"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:iconPadding="8dp"
                        app:iconTint="@android:color/transparent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView_recovery"
                        app:rippleColor="@android:color/transparent" />

                    <Button
                        android:id="@+id/textView_createAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:text="@string/createAccount"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textStyle="bold|italic"
                        app:layout_constraintBottom_toTopOf="@+id/textView_recovery"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
